working on mvp; have the database-seed.sql file written

--- a/ProcrastiPlate.API/Dockerfile
+++ b/ProcrastiPlate.API/Dockerfile
@@ -7,17 +7,17 @@ EXPOSE 8081
 FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["ProcrastiPlate.API/ProcrastiPlate.API.csproj", "ProcrastiPlate.API/"]
-RUN dotnet restore "ProcrastiPlate.API/ProcrastiPlate.API.csproj"
+COPY ["ProcrastiPlate.Api/ProcrastiPlate.Api.csproj", "ProcrastiPlate.Api/"]
+RUN dotnet restore "ProcrastiPlate.Api/ProcrastiPlate.Api.csproj"
 COPY . .
-WORKDIR "/src/ProcrastiPlate.API"
-RUN dotnet build "./ProcrastiPlate.API.csproj" -c $BUILD_CONFIGURATION -o /app/build
+WORKDIR "/src/ProcrastiPlate.Api"
+RUN dotnet build "./ProcrastiPlate.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./ProcrastiPlate.API.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "./ProcrastiPlate.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "ProcrastiPlate.API.dll"]
+ENTRYPOINT ["dotnet", "ProcrastiPlate.Api.dll"]
