--- a/ProcrastiPlate.API/appsettings.json
+++ b/ProcrastiPlate.API/appsettings.json
@@ -1,12 +1,13 @@
 {
-  "ConnectionStrings": {
-    "Database": "Host=procrastiplate.database;Port=5432;Database=procrastiplate;Username=procrastiplateuser;Password=1234;Include Error Detail=true"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*"
+    "ConnectionStrings": {
+        "Database": "Host=localhost;Port=5432;Database=procrastiplate;Username=procrastiplateuser;Password=1234;Include Error Detail=true"
+        //"Database": "Host=procrastiplate.database;Port=5432;Database=procrastiplate;Username=procrastiplateuser;Password=1234;Include Error Detail=true"
+    },
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
