--- a/ProcrastiPlate.API/ProcrastiPlate.API.csproj
+++ b/ProcrastiPlate.API/ProcrastiPlate.API.csproj
@@ -10,13 +10,19 @@
     <ItemGroup>
         <PackageReference Include="Dapper" Version="2.1.66" />
         <PackageReference Include="Npgsql" Version="9.0.3" />
-        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2"/>
+        <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
       <Content Include="..\.dockerignore">
         <Link>.dockerignore</Link>
       </Content>
+    </ItemGroup>
+
+    <ItemGroup>
+      <Folder Include="Middleware\" />
+      <Folder Include="Filters\" />
+      <Folder Include="Extensions\" />
     </ItemGroup>
 
 </Project>
