--- a/ProcrastiPlate.API/ProcrastiPlate.API.csproj
+++ b/ProcrastiPlate.API/ProcrastiPlate.API.csproj
@@ -8,21 +8,24 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Dapper" Version="2.1.66" />
-        <PackageReference Include="Npgsql" Version="9.0.3" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
     </ItemGroup>
 
     <ItemGroup>
-      <Content Include="..\.dockerignore">
-        <Link>.dockerignore</Link>
-      </Content>
+        <Content Include="..\.dockerignore">
+            <Link>.dockerignore</Link>
+        </Content>
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Middleware\" />
-      <Folder Include="Filters\" />
-      <Folder Include="Extensions\" />
+        <Folder Include="Middleware\" />
+        <Folder Include="Filters\" />
+        <Folder Include="Extensions\" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\ProcrastiPlate.Core\ProcrastiPlate.Core.csproj" />
+      <ProjectReference Include="..\ProcrastiPlate.Infrastructure\ProcrastiPlate.Infrastructure.csproj" />
     </ItemGroup>
 
 </Project>
