--- a/ProcrastiPlate.Core/ProcrastiPlate.Core.csproj
+++ b/ProcrastiPlate.Core/ProcrastiPlate.Core.csproj
@@ -10,4 +10,12 @@
     <Folder Include="Exceptions\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Npgsql" Version="10.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\ProcrastiPlate.Contracts\ProcrastiPlate.Contracts.csproj" />
+  </ItemGroup>
+
 </Project>
